# django-fsm

./: .checkignore  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README  README.md  README.rst  README.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  tests.yml
django_fsm/: __init__.py  models.py  signals.py  tests.py  tools.py
django_fsm/db/fields/: __init__.py  fsmfield.py
django_fsm/management/commands/: graph_transitions.py
django_fsm/templatetags/: fsm_tags.py
django_fsm/tests/: __init__.py  test_abstract_inheritance.py  test_basic_transitions.py  test_conditions.py  test_inheritance.py  test_integer_field.py  test_key_field.py  test_multiple_transitions.py  test_propagate_field.py  test_propogate_field.py  test_protected_field.py  test_protected_fields.py  test_proxy_inheritance.py
tests/: db_tests.sqlite  environment.pip  manage.py  manage.sh  manage_venv.py  requirements.pip  requirements_test.pip  run_tests.sh  settings.py  test_custom_data.py  test_runner.py
tests/testapp/: apps.py  models.py  tests.py
tests/testapp/fixtures/: test_states_data.json
tests/testapp/migrations/: 0001_initial.py
tests/testapp/tests/: test_access_deferred_fsm_field.py  test_command.py  test_custom_data.py  test_exception_transitions.py  test_inheritance.py  test_lock_mixin.py  test_mixin_support.py  test_model_create_with_generic.py  test_multi_resultstate.py  test_multidecorators.py  test_object_permissions.py  test_permissions.py  test_state_transitions.py  test_string_field_parameter.py  test_transition_all_except_target.py
