[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
  # https://beta.ruff.rs/docs/rules/
  "F",  # Pyflakes
  "E",  # pycodestyle
  "W",  # pycodestyle
  "C90",  # mccabe
  "I",  # isort
  # "D",  # pydocstyle
  "UP",  # pyupgrade
  # "N",  # pep8-naming
  # "YTT",  # flake8-2020
  # "ANN",  # flake8-annotations
  # "S",  # flake8-bandit
  # "BLE",  # flake8-blind-except
  # "FBT",  # flake8-boolean-trap
  # "B",  # flake8-bugbear
  # "A",  # flake8-builtins
  # "C4",  # flake8-comprehensions
  # "T10",  # flake8-debugger
  # "EM",  # flake8-errmsg
  # "ISC",  # flake8-implicit-str-concat
  # "ICN",  # flake8-import-conventions
  # "T20",  # flake8-print
  # "PT",  # flake8-pytest-style
  # "Q",  # flake8-quotes
  # "RET",  # flake8-return
  # "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  # "ARG",  # flake8-unused-arguments
  # "DTZ",  # flake8-datetimez
  # "ERA",  # eradicate
  # "PD",  # pandas-vet
  "PGH",  # pygrep-hooks
  # "PLC",  # Pylint
  # "PLE",  # Pylint
  # "PLR",  # Pylint
  # "PLW",  # Pylint
  # "PIE",  # flake8-pie
  # "COM",  # flake8-commas
  "INP",  # flake8-no-pep420
  # "RUF",  # Ruff-specific rules
  # "PTH",  # flake8-use-pathlib
  # "DJ",  # flake8-django
]
ignore = []
fixable = ["ALL"]
unfixable = ["B"]

[tool.poetry]
name = "django-fsm"
version = "2.8.1"
description = "Django friendly finite state machine support."
authors = ["Mikhail Podgurskiy <kmmbvnr@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "http://github.com/kmmbvnr/django-fsm"
repository = "http://github.com/kmmbvnr/django-fsm"
documentation = "http://github.com/kmmbvnr/django-fsm"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Framework :: Django',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [{ include = "django_fsm" }]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2"

[tool.poetry.group.graphviz.dependencies]
graphviz = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
django-guardian = "*"
graphviz = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
