[metadata]
name = django-fsa
version = 2.7.2
description = Django friendly finite state machine support, forked from django-fsm
long_description = file: README.rst, CHANGELOG.rst, LICENSE.txt
author = Antoine Fontaine
author_email = antoine.fontaine@gmail.com
url = http://github.com/mdziwny/django-fsm
keywords = django
license = MIT License
platforms = any
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Web Environment
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Framework :: Django
        Framework :: Django :: 1.11
        Framework :: Django :: 2.0
        Framework :: Django :: 2.1
        Framework :: Django :: 2.2
        Programming Language :: Python
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = django_fsm, django_fsm.management
install_requires =
  django>=1.11

[bdist_wheel]
universal = 1
